--- a/helm/install
+++ b/helm/install
@@ -6,3 +6,5 @@ $ ./get_helm.sh
 helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
 
 helm repo update
+
+helm create nginx-chart
